# otus-cpp-lesson1

./: .editorconfig  .gitignore  .travis.yml  CMakeLists.txt
src/: CMakeLists.txt  gtest_version.cpp  hello.cpp
